# AI-Assistant-Desktop

assistant/: README.md  chat.py  main.py  pyproject.toml  speak.py
assistant/templates/: index.html
